# take-a-break-tool-mcp

./: .gitignore  IDEAS.txt  LICENSE  README.md  pyproject.toml  setup.py
src/take_a_break_tool/: __init__.py  server.py
